first version mobile fix

--- a/tia/css/style.css
+++ b/tia/css/style.css
@@ -29,6 +29,7 @@ body {
 }
 
 .section{
+  width:100%;
   min-height:300px;
   /*border-bottom: 1px solid #888;*/
   padding:2em 10%;
